Update the jupyter file to plot interactive figure.

--- a/liteloc_train_astig_npc_sw.ipynb
+++ b/liteloc_train_astig_npc_sw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import os\n",
@@ -16,16 +16,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-19T15:25:20.088939200Z",
-     "start_time": "2024-09-19T15:25:18.012459900Z"
+     "end_time": "2024-09-19T15:41:36.688326500Z",
+     "start_time": "2024-09-19T15:41:36.678326100Z"
     }
    },
    "id": "c51023b35d66c552"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'param_astig_train_oil_spline.yaml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 4\u001B[0m\n\u001B[1;32m      1\u001B[0m setup_seed(\u001B[38;5;241m15\u001B[39m)\n\u001B[1;32m      3\u001B[0m yaml_file \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mparam_astig_train_oil_spline.yaml\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m----> 4\u001B[0m params \u001B[38;5;241m=\u001B[39m \u001B[43mload_yaml\u001B[49m\u001B[43m(\u001B[49m\u001B[43myaml_file\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      6\u001B[0m writelog(params\u001B[38;5;241m.\u001B[39mTraining\u001B[38;5;241m.\u001B[39mresult_path)\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(params)\n",
+      "File \u001B[0;32m~/liteloc_git/utils/help_utils.py:18\u001B[0m, in \u001B[0;36mload_yaml\u001B[0;34m(yaml_file)\u001B[0m\n\u001B[1;32m     17\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mload_yaml\u001B[39m(yaml_file):\n\u001B[0;32m---> 18\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43myaml_file\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mr\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[1;32m     19\u001B[0m         params \u001B[38;5;241m=\u001B[39m yaml\u001B[38;5;241m.\u001B[39mload(f, Loader\u001B[38;5;241m=\u001B[39myaml\u001B[38;5;241m.\u001B[39mSafeLoader)\n\u001B[1;32m     20\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m recursivenamespace\u001B[38;5;241m.\u001B[39mRecursiveNamespace(\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mparams)\n",
+      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'param_astig_train_oil_spline.yaml'"
+     ]
+    }
+   ],
    "source": [
     "setup_seed(15)\n",
     "\n",
@@ -39,24 +52,36 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-19T15:25:21.018078100Z",
-     "start_time": "2024-09-19T15:25:20.992078400Z"
+     "end_time": "2024-09-19T15:41:37.592071500Z",
+     "start_time": "2024-09-19T15:41:37.538560300Z"
     }
    },
    "id": "74860335ad8caa3c"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'params' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[5], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m liteloc \u001B[38;5;241m=\u001B[39m LitelocModel(\u001B[43mparams\u001B[49m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'params' is not defined"
+     ]
+    }
+   ],
    "source": [
     "liteloc = LitelocModel(params)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-19T15:26:06.251840800Z",
-     "start_time": "2024-09-19T15:25:22.499131500Z"
+     "end_time": "2024-09-19T15:41:38.617282500Z",
+     "start_time": "2024-09-19T15:41:38.589284300Z"
     }
    },
    "id": "3256c8b8cad39902"
@@ -81,7 +106,8 @@
     }
    ],
    "source": [
-    "fig = show_sample_psf(psf_pars=params.PSF_model, train_pars=params.Training)"
+    "%matplotlib widget\n",
+    "show_sample_psf(psf_pars=params.PSF_model, train_pars=params.Training)"
    ],
    "metadata": {
     "collapsed": false,
@@ -113,7 +139,8 @@
     }
    ],
    "source": [
-    "fig.show()"
+    "%matplotlib widget\n",
+    "show_train_img(image_num=4, camera_params=params.Camera, psf_params=params.PSF_model, train_params=params.Training)"
    ],
    "metadata": {
     "collapsed": false,
@@ -123,16 +150,6 @@
     }
    },
    "id": "a0c79b3b0fe37d5e"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "4c36c5e24b4e20d5"
   }
  ],
  "metadata": {
