general training & inference code
codes for training and inference, same code with argparse package to control the inputs

--- a/demo_description.ipynb
+++ b/demo_description.ipynb
@@ -51,7 +51,7 @@
     "from utils.help_utils import *\n",
     "from utils.vectorpsf_fit import beads_psf_calibrate\n",
     "from utils.visual_utils import show_sample_psf\n",
-    "from network.loc_model import LitelocModel\n",
+    "from network.loc_model import LocModel\n",
     "from utils.visual_utils import show_train_img\n",
     "main_directory = os.getcwd()\n",
     "params_dict = {}"
@@ -207,23 +207,31 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter the file name：\n"
+     ]
+    },
+    {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " test0402\n"
+      " test_train\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as : E:/Torch/LiteLoc_0401\\test0402.yaml\n"
+      "File saved as : E:/Torch/LiteLoc_0401\\test_train.yaml\n"
      ]
     }
    ],
    "source": [
     "yaml_file_folder = select_path('folder')\n",
     "\n",
+    "print(\"Please enter the file name：\")\n",
     "file_name = input()\n",
     "if file_name[-5:] != '.yaml': \n",
     "    file_name += '.yaml'\n",
@@ -240,10 +248,10 @@
    "metadata": {},
    "source": [
     "## Pre-train test:\n",
-    "To run the training code, you can either use the parameter file you defined earlier or the demo setting files listed below. To do so, execute the following code:\n",
-    " - demo/demo-fig3a/train_params_demo_fig3a.yaml\n",
-    " - demo/demo-fig3d/train_params_demo_fig3d.yaml\n",
-    " - demo/demo-uipsf/train_params_demo_uipsf.yaml"
+    "To run the training code, you can either use the parameter file you defined earlier or try the demo setting files we provided listed below:\n",
+    " - demo/demo1_astig_npc/train_params_demo_fig3a.yaml\n",
+    " - demo/demo2_tetrapod_npc/train_params_demo_fig3d.yaml\n",
+    " - demo/demo4_uipsf/train_params_demo_uipsf.yaml"
    ]
   },
   {
@@ -418,9 +426,11 @@
     }
    ],
    "source": [
-    "yaml_file_path = select_path('file')\n",
+    "# yaml_file_path = select_path('file')\n",
     "\n",
-    "print(\"File selected : \", yaml_file_path)\n",
+    "# print(\"File selected : \", yaml_file_path)\n",
+    "\n",
+    "yaml_file_path = \"demo/demo3_calibrate_psf/params_demo3_psf_calibration.yaml\"\n",
     "\n",
     "calib_params= load_yaml(yaml_file_path)\n",
     "\n",
@@ -619,8 +629,8 @@
    "metadata": {},
    "source": [
     "Alternatively, to run the pre-trained model we provided, you can load the parameter files stored in the demo folder, along with the downloaded model and dataset. The parameter files are listed below:\n",
-    " - demo\\\\demo-fig3a\\\\infer_params_demo_fig3a.yaml\n",
-    " - demo\\\\demo-fig3d\\\\infer_params_demo_fig3d.yaml"
+    " - demo/demo1_astig_npc/infer_params_demo1.yaml\n",
+    " - demo/demo2_tetrapod_npc/infer_params_demo_fig3d.yaml"
    ]
   },
   {
@@ -673,6 +683,23 @@
    "source": [
     "! python liteloc_train_demo.py --infer_params_path [folder\\parameter_file_name.yaml]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10ed2bbf-0133-45c2-a30d-3459e46effb7",
+   "metadata": {},
+   "source": [
+    "## Model Test\n",
+    "Comparison of the performance of LiteLoc against the state-of-the-art"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b70f9a7-5c2c-4267-8a82-be8faae7f55f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
