Revised README.md.

--- a/demo/general_training_inference.ipynb
+++ b/demo/general_training_inference.ipynb
@@ -151,8 +151,7 @@
       "offset : None\n",
       "model_init : None\n",
       "project_path : E:\\Torch\\LiteLoc_0401\n",
-      "project_name : LiteLoc-main\n",
-      "\n"
+      "project_name : LiteLoc-main\n"
      ]
     }
    ],
@@ -282,8 +281,7 @@
       "pn_res : 64\n",
       "factor : None\n",
       "offset : None\n",
-      "model_init : None\n",
-      "\n"
+      "model_init : None\n"
      ]
     },
     {
@@ -330,7 +328,7 @@
    "source": [
     "if params.Training.bg is None:\n",
     "    from network.loc_model import LocModel\n",
-    "    liteloc = LitelocModel(params)"
+    "    liteloc = LocModel(params)"
    ]
   },
   {
@@ -387,7 +385,7 @@
    "metadata": {},
    "source": [
     "## Model Inference\n",
-    "Similar to the training process, parameter setting is the first step to apply the pre-trained model. As single molecule localization (**SMLM**) technology involves a temporal and spatial trade-off, the number of input image frames is typically large when implementing 3D localization and synthesizing 3D super-resolution images. Device settings play a key role in accelerating the inference process. To define your own parameters, use the following code, similar to the one provided above."
+    "Similar to the training process, parameter setting is the first step to apply the pre-trained model. As single molecule localization (**SMLM**) technology involves a temporal and spatial trade-off, the number of input image frames is typically large when implementing 3D localization and synthesizing 3D super-resolution images. Device settings play a key role in accelerating the inference process. Please define your own parameters, use the following code, similar to the one provided above."
    ]
   },
   {
@@ -409,8 +407,7 @@
       "batch_size : 30\n",
       "over_cut : 8\n",
       "multi_gpu : True\n",
-      "num_producers : 1\n",
-      "\n"
+      "num_producers : 1\n"
      ]
     },
     {
